# Custom_Homepage

exif_project/: Cargo.toml  Dioxus.toml  README.md
exif_project/assets/: main.css
exif_project/src/: main.rs
exif_project/src/image_response/: alternative_slug.rs  coordinates.rs  exif.rs  location.rs  meta.rs  mod.rs  photo_links.rs  profile_image.rs  social.rs  tag.rs  url.rs  user.rs  user_links.rs
